Revision history for Perl extension Dist::Zilla::PluginBundle::Author::GTERMARS

{{$NEXT}}
    - Post-release, push branches+tags upstream to Git
    - Pre-release, check for outstanding issues.

0.02      2020-12-31 11:58:32-08:00 America/Vancouver
    - Exclude `cpanfile` from distribution tarballs
    - Leave `xt/` tests in `xt/`, don't move them to `t/`

0.01      2020-12-30 20:36:56-08:00 America/Vancouver
    - Initial release