@@ -75,10 +75,8 @@ verify_prereqs = 1
 [Test::UnusedVars]
 [Test::Kwalitee]
 [Test::Compile]
-xt_mode = 1
 fake_home = 1
-filename = xt/author/compile.t
-fail_on_warning = author
+filename = t/01-compile.t
 bail_out_on_fail = 1
 
 ; ==============================================================================
