@@ -3,6 +3,7 @@ Revision history for Perl extension Dist::Zilla::PluginBundle::Author::GTERMARS
 {{$NEXT}}
     - Post-release, push branches+tags upstream to Git
     - Pre-release, check for outstanding issues.
+    - Moved "Test::Compile" to a "t/" test, instead of "xt/"
 
 0.02      2020-12-31 11:58:32-08:00 America/Vancouver
     - Exclude `cpanfile` from distribution tarballs
